--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -3,13 +3,19 @@ extends ../layout
 block content
 	.container
 		.row
-			each item in movies
-				.col-md-2
-					.thumbnail
-						a(href='/movie/#{item._id}')
-							img(src='#{item.poster}',alt='#{item.title}')
-						.caption
-							h3 #{item.title}
-							p: a.btn.btn-primary(href='/movie/#{item._id}',role='button')
-								观看预告片
+			each cat in catetories
+				.panel.panel-primary
+					.panel-heading
+						h3 #{cat.name}
+					.panel-body
+						if cat.movies &&cat.movies.length > 0
+							each item in cat.movies
+								.col-md-2
+									.thumbnail
+										a(href='/movie/#{item._id}')
+											img(src='#{item.poster}',alt='#{item.title}',style='width:100px;height:100px;')
+										.caption
+											h3 #{item.title}
+											p: a.btn.btn-primary(href='/movie/#{item._id}',role='button')
+												观看预告片
 
