--- a/app/views/pages/list.jade
+++ b/app/views/pages/list.jade
@@ -23,7 +23,7 @@ block content
 							td #{item.year}
 							td #{moment(item.meta.updatedAt).format('MM/DD/YYYY')}
 							td: a(target='_blank',href='/movie/#{item._id}') 查看
-							td: a(target='_blank',href='/admin/updatemovie/#{item._id}') 修改
+							td: a(target='_blank',href='/admin/movie/update/#{item._id}') 修改
 							td
 								button.btn.btn-danger.del(type='button',data-id='#{item._id}') 删除
 	script(src='/js/admin.js')
