--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -4,7 +4,7 @@ block content
 	.container
 		.row
 			each cat in catetories
-				.panel.panel-primary
+				.panel.panel-default
 					.panel-heading
 						h3 #{cat.name}
 					.panel-body
