--- a/app/views/pages/admin.jade
+++ b/app/views/pages/admin.jade
@@ -4,6 +4,10 @@ block content
 	.container
 		.row
 			form.form-horizontal(method='post',action='/admin/movie')
+				.form-group
+					label.col-sm-2.control-label 豆瓣同步
+					.col-sm-10
+						input#douban.form-control(type='text')
 				if movie._id
 					input(type='hidden',name='movie[_id]',value='#{movie._id}')
 				.form-group
@@ -55,5 +59,6 @@ block content
 				.form-group
 					.col-sm-offset-2.col-sm-10
 					button.btn.btn-default(type="submit") 录入
+	script(src='/js/admin.js')
 
 
