--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -6,7 +6,8 @@ block content
 			each cat in catetories
 				.panel.panel-default
 					.panel-heading
-						h3 #{cat.name}
+						h3
+							a(href='/results?cat=#{cat._id}&p=0') #{cat.name}
 					.panel-body
 						if cat.movies &&cat.movies.length > 0
 							each item in cat.movies
