增加图片上传功能

--- a/app/views/pages/list.jade
+++ b/app/views/pages/list.jade
@@ -6,7 +6,7 @@ block content
 			table.table.table-hover.table-bodered
 				thead
 					tr
-						th 电影分类ID
+						th 电影分类
 						th 电影名字
 						th 导演
 						th 国家
@@ -18,7 +18,7 @@ block content
 				tdody
 					each item in movies
 						tr(class='item-id-#{item._id}')
-							td #{item.catetory}
+							td #{item.catetory.name}
 							td #{item.title}
 							td #{item.doctor}
 							td #{item.country}
