--- a/app/views/pages/admin.jade
+++ b/app/views/pages/admin.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
 	.container
 		.row
-			form.form-horizontal(method='post',action='/admin/movie')
+			form.form-horizontal(method='post',action='/admin/movie',enctype='multipart/form-data')
 				.form-group
 					label.col-sm-2.control-label 豆瓣同步
 					.col-sm-10
@@ -44,6 +44,10 @@ block content
 					label.col-sm-2.control-label(for="inputPoster") 海报地址
 					.col-sm-10
 						input#inputPoster.form-control(type="text", name="movie[poster]", value=movie.poster)
+				.form-group
+					label.col-sm-2.control-label(for="uploadPoster") 海报上传
+					.col-sm-10
+						input#uploadPoster(type="file", name="uploadPoster")
 				.form-group
 					label.col-sm-2.control-label(for="inputFlash") 片源地址
 					.col-sm-10
