--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -14,7 +14,10 @@ block content
 								.col-md-2
 									.thumbnail
 										a(href='/movie/#{item._id}')
-											img(src='#{item.poster}',alt='#{item.title}',style='width:100px;height:100px;')
+											if item.poster.indexOf('http') > -1
+												img(src='#{item.poster}',alt='#{item.title}',style='width:100px;height:100px;')
+											else
+												img(src='/upload/#{item.poster}',alt='#{item.title}',style='width:100px;height:100px;')
 										.caption
 											h3 #{item.title}
 											p: a.btn.btn-primary(href='/movie/#{item._id}',role='button')
