--- a/app/views/pages/list.jade
+++ b/app/views/pages/list.jade
@@ -12,6 +12,7 @@ block content
 						th 国家
 						th 上映年份
 						th 录入时间
+						th pv
 						th 查看
 						th 更新
 						th 删除
@@ -24,6 +25,7 @@ block content
 							td #{item.country}
 							td #{item.year}
 							td #{moment(item.meta.updatedAt).format('MM/DD/YYYY')}
+							td #{item.pv}
 							td: a(target='_blank',href='/movie/#{item._id}') 查看
 							td: a(target='_blank',href='/admin/movie/update/#{item._id}') 修改
 							td
