--- a/client/src/style/login/login.less
+++ b/client/src/style/login/login.less
@@ -1,3 +1,10 @@
+body{
+	position: relative;
+    width: 100%;
+    height: 100vh;
+    background: url(https://welogix-web-cdn.b0.upaiyun.com/assets/img/login-splash-bg-port.jpg) no-repeat center center;
+    background-size: cover;
+}
 .login-form {
     max-width: 300px;
 	position: absolute;
