添加404页面，登出redux状态

--- a/client/src/style/login/login.less
+++ b/client/src/style/login/login.less
@@ -1,8 +1,8 @@
-body{
+#login{
 	position: relative;
     width: 100%;
     height: 100vh;
-    background: url(https://welogix-web-cdn.b0.upaiyun.com/assets/img/login-splash-bg-port.jpg) no-repeat center center;
+    background: url('https://welogix-web-cdn.b0.upaiyun.com/assets/img/login-splash-bg-port.jpg') no-repeat center center;
     background-size: cover;
 }
 .login-form {
