--- a/client/src/style/layout/layout.less
+++ b/client/src/style/layout/layout.less
@@ -1,7 +1,25 @@
 .logo {
-	height: 32px;
-	background: rgba(255,255,255,.2);
-	margin: 16px;
+	text-align: center;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    margin: 28px 0;
+    -webkit-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    overflow: hidden;
+    img {
+        width: 40px;
+        margin-right: 8px;
+        -webkit-transition: all 0.3s ease-out;
+        -o-transition: all 0.3s ease-out;
+        transition: all 0.3s ease-out;
+    }
+    span{
+        color: white;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
 }
 .trigger {
 	font-size: 18px;
